fix hero image and text on mobile

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,83 +1,104 @@
-.heroImage {
-    height: 530px;
-    border-radius: 50%;
-    border: 1px solid #ccc;
-    z-index: 2;
-}
 
-.logo {
-    position: relative;
-    top: 63px;
-    height: 100px;
-    z-index: 3;
-}
 
-h1, h2 {
-    height: 0;
-    position: relative;
-    margin: 10px;
-}
+    .heroImage {
+        height: 80vw;
+        max-height: 530px;
+        border: 1px solid #ccc;
+        z-index: 2;
+    }
 
-h1 {
-    top: -225px;
-    font-size: 5em;
-    font-weight: 400;
-}
+    .logo {
+        position: relative;
+        top: 63px;
+        height: 100px;
+        z-index: 3;
+    }
 
-h2 {
-    top: -125px;
-    font-size: 2.5em;
-    font-weight: 500;
-}
+    h1, h2 {
+        height: 0;
+        position: relative;
+        margin: 10px;
+    }
 
-.content {
-    position: relative;
-}
+    h1 {
+        top: -100px;
+        font-size: 4em;
+        font-weight: 400;
+    }
 
-.main {
-    min-height: 30px;
-    min-width: 30px;
-}
+    h2 {
+        top: -75px;
+        font-size: 2em;
+        font-weight: 500;
+    }
 
-.underlay {
-    display: block;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 1;
-}
+    .content {
+        position: relative;
+    }
 
-.underlay2 {
-    display: block;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 1;
-}
+    .main {
+        min-height: 30px;
+        min-width: 30px;
+    }
 
-.overlay {
-    z-index: 3;
-}
+    .underlay {
+        display: block;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        z-index: 1;
+    }
 
-.shadowRight {
-    text-shadow: 1px 1px 3px #BFD1E5;
-}
+    .underlay2 {
+        display: block;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        z-index: 1;
+    }
 
-.shadowLeft {
-    text-shadow: -1px -1px 3px #BFD1E5;
-}
+    .overlay {
+        z-index: 3;
+    }
 
-.heroContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
+    .shadowRight {
+        text-shadow: 1px 1px 3px #BFD1E5;
+    }
 
-svg {
-    display: block;
-    margin: 0 auto;
+    .shadowLeft {
+        text-shadow: -1px -1px 3px #BFD1E5;
+    }
+
+    .heroContainer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    svg {
+        display: block;
+        margin: 0 auto;
+    }
+/* } */
+
+@media (min-width: 768px) {
+    .heroImage {
+        max-height: 530px;
+    }
+
+    h1 {
+        top: -100px;
+        font-size: 4em;
+        font-weight: 400;
+    }
+
+    h2 {
+        top: -125px;
+        font-size: 2.5em;
+        font-weight: 500;
+    }
 }
