--- a/src/components/Statement/Statement.module.css
+++ b/src/components/Statement/Statement.module.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 40vw;
     margin-bottom: 40px;
 }
 
@@ -13,5 +12,3 @@
 h4 {
     margin-bottom: 0;
 }
-
-
