--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,14 @@ body {
   /* background-color: #E5E2D2; */
   background-color: #1D2D44;
   
-  font-size: 20px;
+  font-size: calc(14px + (22 - 14) * ((100vw - 300px) / (1600 - 300)));
+  line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(1600 - 300)));
+
   /* padding: 20px 300px 50px; */
   padding-top: 40px;
+}
+
+body {
 }
 
 code {
